--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,8 @@
     <color name="yellow">#FFC114</color>
     <color name="green">#00C980</color>
 
+    <color name="actionBarBackgroundColor">@color/colorPrimary</color>
+
 
     // Custom Chip Style
     <color name="checkedChipBackgroundColor">#206200EA</color>
