Implemented instructions and ingredient fragments!

--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -32,7 +32,7 @@
         android:id="@+id/time_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="12dp"
         android:text="100"
         android:textColor="@color/white"
@@ -45,17 +45,19 @@
         android:id="@+id/time_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="42dp"
         android:src="@drawable/ic_time"
         app:layout_constraintBottom_toTopOf="@+id/time_textView"
         app:layout_constraintEnd_toEndOf="@+id/time_textView"
         app:layout_constraintStart_toStartOf="@+id/time_textView"
+        app:layout_constraintTop_toTopOf="@+id/gradient_overlay"
         app:tint="@color/white" />
 
     <TextView
         android:id="@+id/likes_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="24dp"
         android:text="100"
         android:textColor="@color/white"
         android:textSize="16sp"
